@@ -18,3 +18,6 @@ Pretty URLs 0.1                                          ??
  + Base: Added 'pretty_root_url' setting, defaulting to $boardurl.
  + ext-none: Replace the board urls in the BoardIndex and MessageIndex templates.
  ! Base: Fixed $characterHash so '+' would never be in a URL. (Subs-PrettyUrls.php)
+ ! Base: Fixed some issues when the mbstrings extension wasn't installed. (QueryString.php, Subs-PrettyUrls.php)
+ ! Base: Fixed issues with '&amp;' and removed unwanted '-'s. (Subs-PrettyUrls.php)
+ + Base: A new board deserves a new URL! (ManageBoards.php)
